# PythonWEBTask14

./: README.md
homework14/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test.db
homework14/docs/: conf.py  index.rst
homework14/docs/_build/doctrees/: environment.pickle  index.doctree
homework14/docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
homework14/src/: schemas.py
homework14/src/conf/: config.py
homework14/src/database/: db.py  models.py
homework14/src/middleware/: cors.py
homework14/src/repository/: contacts.py  users.py
homework14/src/routes/: auth.py  contacts.py  users.py
homework14/src/services/: auth.py  email_verification.py
homework14/tests/: test_auth_routes.py  test_unit_repository_contacts.py  test_unit_repository_users.py
